--- a/app/views/includes/tracking-links-go-live.html
+++ b/app/views/includes/tracking-links-go-live.html
@@ -3,11 +3,14 @@
 {% macro trackingLinks(number) %}
 <tr>
   <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>{{ session.eventsLiveURLS[session.currentEventShowing][0][number] }}</td>
-  <td style="padding-top:25px; padding-bottom:20px;">{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</td>
-  <td style="padding-top:15px; padding-bottom:15px;" >
-    <div>
-      <input style="float:right;" type="submit" class="button-secondary" formaction="/create-event/go-live" value="Copy to clipboard">
+  <td style="padding-top:25px; padding-bottom:20px; width:70%;">
+    <div style="display:flex;  justify-content: space-between;">
+      <p style="margin-top:8px; margin-bottom:0px;">www.events.great.gov.uk/{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</p>
+      <div>
+        <input style="float:right;" type="submit" class="button-secondary" formaction="/create-event/go-live" value="Copy to clipboard">
+      </div>
     </div>
+
   </td>
 </tr>
 {% endmacro %}
@@ -50,7 +53,7 @@
 
   <!-- Add new  tracking link -->
   <tr>
-    <td style="width:30%; font-weight:700; padding-top:12px; padding-bottom:35px;";>
+    <td style="width:30%; font-weight:700; padding-top:12px; padding-bottom:35px; padding-right:0px;";>
 
       <label class="form-label" >
         Marketing channel name
@@ -65,30 +68,40 @@
              id="new-link-name" name="new-link-name" value="" style="width:90%;">
     </td>
 
-    <td style="width:60%; margin-top:0px; padding-top:20px; padding-bottom:20px; ">
+    <td style="width:70%; margin-top:0px; padding-top:20px; padding-bottom:6px; ">
       {% if errorTrackingName %}
-        <div style="width:95%;">
+        <div style="width:100%;">
       {% else %}
-        <div style="width:95%;">
+        <div style="width:100%;">
       {% endif %}
 
-          <textarea type="text" class="form-control" id="new-url" name="new-url" rows="2"
-                    style="width: 100%; display:none; margin-top:0px; margin-bottom:0px;">{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}</textarea>
+          <div id="new-url-area" name="new-url-area" style="display:none; padding-top:18px;">
 
-          <p class="button-secondary" onclick="makeLink()" id="link-generator" style="margin-top:0px">Generate link</p>
+            <div style="display:flex; justify-content: space-between;">
+
+              <div style="display:flex">
+                <p style="margin-top:6px;">www.events.great.gov.uk/</p>
+                <textarea type="text" class="form-control"  id="new-url" name="new-url"  rows="2"
+                          style="width:320px; margin-top:0px; margin-bottom:0px;">{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}</textarea>
+              </div>
+
+              <div id=divsave" style="margin-left:0px;">
+                <input style="width:100%;" type="submit" class="button" formaction="/add-tracking-link-go-live" value="Save">
+              </div>
+
+            </div>
+
+          </div>
+
+          <div style="padding-bottom:12px;" id="link-generator">
+            <p class="button-secondary" onclick="makeLink()"  style="margin-top:0px">Generate link</p>
+          </div>
 
       {% if errorTrackingName %}
         </div>
       {% else %}
         </div>
       {% endif %}
-
-    </td>
-
-    <td style="width:10%; padding-top:15px; padding-bottom:15px;" >
-      <div  id="divsave" style="display:none;" >
-        <input style="width:100%;"  type="submit" class="button" formaction="/add-tracking-link-go-live" value="Save">
-      </div>
 
     </td>
 
@@ -118,10 +131,10 @@
     // aDD TO THE LINK BOX
     document.getElementById('new-url').value = (document.getElementById('new-url').value + "-" + urlOfName);
 
-    document.getElementById('divsave').style.display = 'block';
+    //document.getElementById('divsave').style.display = 'block';
 
     document.getElementById('link-generator').style.display = 'none';
-    document.getElementById('new-url').style.display = 'block';
+    document.getElementById('new-url-area').style.display = 'block';
 
 
   }
