--- a/app/views/includes/tracking-links.html
+++ b/app/views/includes/tracking-links.html
@@ -3,11 +3,14 @@
 {% macro trackingLinks(number) %}
 <tr>
   <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>{{ session.eventsLiveURLS[session.currentEventShowing][0][number] }}</td>
-  <td style="padding-top:25px; padding-bottom:20px;">{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</td>
-  <td style="padding-top:15px; padding-bottom:15px;" >
-    <div>
-      <input style="float:right;" type="submit" class="button-secondary" formaction="/monitor/live-present#track-links" value="Copy to clipboard">
+  <td style="padding-top:25px; padding-bottom:20px; width:70%;">
+    <div style="display:flex;  justify-content: space-between;">
+      <p style="margin-top:8px; margin-bottom:0px;">www.events.great.gov.uk/{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</p>
+      <div>
+        <input style="float:right;" type="submit" class="button-secondary" formaction="/create-event/go-live" value="Copy to clipboard">
+      </div>
     </div>
+
   </td>
 </tr>
 {% endmacro %}
@@ -41,6 +44,7 @@
     {{ trackingLinks(5) }}
   {% endif %}
 
+
   {% if 6 < session.eventsLiveURLS[session.currentEventShowing][0].length  %}
     {{ trackingLinks(6) }}
   {% endif %}
@@ -49,29 +53,49 @@
 
   <!-- Add new  tracking link -->
   <tr>
-    <td style="font-weight:700; width:30%; padding-top:25px; padding-bottom:20px;";>
+    <td style="font-weight:700; width:30%; padding-top:20px; padding-bottom:40px;";>
 
-      {% if errorTrackingName %}
-      <p class="error-message">
-        Enter tracking name
-      </p>
-      {% endif %}
+      <label class="form-label" >
+        Marketing channel name
+        {% if errorTrackingName %}
+        <p class="error-message">
+          Enter tracking name
+        </p>
+        {% endif %}
+      </label>
 
       <input type="text" class="form-control  {% if errorTrackingName %} form-control-error {% endif %}"
-             id="new-link-name" name="new-link-name" value="" style="width:80%">
+             id="new-link-name" name="new-link-name" value="" style="width:90%;">
     </td>
 
-    <td style="padding-top:16px; padding-bottom:20px;">
+    <td style="width:70%; margin-top:0px; padding-top:22px; padding-bottom:5px; ">
       {% if errorTrackingName %}
-        <div style=" margin-top: 20px; margin-bottom: 0px;">
+        <div style="width:100%;">
       {% else %}
-        <div>
+        <div style="width:100%;">
       {% endif %}
 
+          <div id="new-url-area" name="new-url-area" style="display:none; padding-top:18px;">
 
-          <textarea type="text" class="form-control" id="new-url" name="new-url" rows="2" style="width: 90%; display:none; margin-top:11px; margin-bottom:5px;">{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}</textarea>
+            <div style="display:flex; justify-content: space-between;">
 
-          <p class="button-secondary" onclick="makeLink()" id="link-generator" style="margin-top:22px">Generate link</p>
+              <div style="display:flex">
+                <p style="margin-top:6px;">www.events.great.gov.uk/</p>
+                <textarea type="text" class="form-control"  id="new-url" name="new-url"  rows="2"
+                          style="width:320px; margin-top:0px; margin-bottom:0px;">{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}</textarea>
+              </div>
+
+              <div id=divsave" style="margin-left:0px;">
+                <input style="width:100%;" type="submit" class="button" formaction="/monitor/add-tracking-link" value="Save">
+              </div>
+
+            </div>
+
+          </div>
+
+          <div style="padding-top:20px; padding-bottom:12px;" id="link-generator">
+            <p class="button-secondary" onclick="makeLink()"  style="margin-top:0px">Generate link</p>
+          </div>
 
       {% if errorTrackingName %}
         </div>
@@ -81,9 +105,6 @@
 
     </td>
 
-    <td style="padding-top:15px; padding-bottom:15px;" >
-      <input type="submit" class="button" formaction="/monitor/add-tracking-link" value="Save">
-    </td>
   </tr>
 
 </table>
@@ -108,12 +129,13 @@
     urlOfName = urlOfName.replace(/&/g, "");
 
     // aDD TO THE LINK BOX
+    // aDD TO THE LINK BOX
     document.getElementById('new-url').value = (document.getElementById('new-url').value + "-" + urlOfName);
 
+    //document.getElementById('divsave').style.display = 'block';
 
     document.getElementById('link-generator').style.display = 'none';
-    document.getElementById('new-url').style.display = 'block';
-
+    document.getElementById('new-url-area').style.display = 'block';
   }
 
 
