--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -83,6 +83,8 @@
 					<p style="margin-top:10px;">www.events.great.gov.uk/</p>
 					<input type="text" class="form-control" id="new-main-url" name="new-main-url"
 							  style="width: 70%;  margin-top:0px; margin-bottom:10px;" value="{{session.eventsLiveURLS[session.currentEventShowing][1][1]}}">
+				</div>
+
 				<input style="width:10%;" id="save-button" type="submit" class="button" formaction="/update-main-event-link-go-live" value="Save">
 
 			</div>
