--- a/app/views/create-event/organiser.html
+++ b/app/views/create-event/organiser.html
@@ -58,21 +58,6 @@
 
 	  <form action="/create-event/organiser-onwards" method="get" class="form">
 
-			  <div id="event-owner-section" class="form-group {% if errorMissingOwner %} form-group-error {% endif %}" style="margin-top:10px;">
-
-				  <label class="form-label-bold" for="organiser-name">
-					  Who is the internal point of contact for this event?<br>
-					  <span class="form-hint" style="margin-bottom: 0px;">Not publicly displayed - for staff reference.</span>
-					  {% if errorMissingName %}
-						  <span class="error-message">
-							  Please enter an organiser
-						  </span>
-					  {% endif %}
-				  </label>
-
-				  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
-						 id="owner-name" name="owner-name" value="{{ data['owner-name'] }}" style="width: 60%">
-			  </div>
 
 
 		 	  <!-- <p class="panel panel-border-narrow" style="margin-bottom:0px;">The following information will appear on your event webpage and emails.</p> -->
@@ -80,7 +65,7 @@
 			  <div id="organiser-name-section" class="form-group {% if errorMissingName %} form-group-error {% endif %}" style="margin-top:10px;">
 
 				  <label class="form-label-bold" for="organiser-name">
-					  Event organiser contact details<br>
+					  Organiser name to display on webpage<br>
 					  <span class="form-hint" style="margin-bottom: 0px;">Public facing - to be displayed on your webpage.</span>
 
 						  <span style="font-weight:400"></span>
@@ -99,11 +84,11 @@
 
 
 
-		  <!--  EXPORT EXPERINCE    -->
-		  <div class="form-group {% if experienceEmpty %} form-group-error {% endif %}" style="margin-top:20px" id="export-experience">
+		  <!--  contact from the public   -->
+		  <div class="form-group {% if experienceEmpty %} form-group-error {% endif %}" style="margin-top:10px" id="export-experience">
 			  <label class="form-label-bold" >
-				  Ways of being contacted
-				  <span class="form-hint" style="margin-bottom: 0px;">Public facing - to be displayed on your webpage.</span>
+				  Contact details to display on webpage
+				  <!-- <span class="form-hint" style="margin-bottom: 0px;">Select contact options to display on your page.</span>  -->
 				  {% if experienceEmpty %}
 					  <span class="error-message">
 						  Indicate the level of export experience this event is relevant to.
@@ -158,6 +143,24 @@
 					  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
 							 id="contact-phone" name="contact-phone" value="{{ data['contact-phone'] }}" style="width: 25%">
 			  </div>
+
+
+		  <div id="event-owner-section" class="form-group {% if errorMissingOwner %} form-group-error {% endif %}" style="margin-top:10px;">
+
+			  <label class="form-label-bold" for="organiser-name">
+				  Internal contact for this event<br>
+				  <span class="form-hint" style="margin-bottom: 0px;">Not publicly displayed - for staff reference.</span>
+				  {% if errorMissingName %}
+						  <span class="error-message">
+							  Please enter an organiser
+						  </span>
+				  {% endif %}
+			  </label>
+
+			  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
+					 id="owner-name" name="owner-name" value="{{ data['owner-name'] }}" style="width: 60%">
+		  </div>
+
 
 
 
