--- a/app/views/create-event/organiser.html
+++ b/app/views/create-event/organiser.html
@@ -51,7 +51,7 @@
 
 
 	  <h1 class="heading-large" style="margin-top:15px">
-        Organiser contact details
+		  Event owner and contact details
       </h1>
 
 
@@ -66,7 +66,7 @@
 
 				  <label class="form-label-bold" for="organiser-name">
 					  Organiser name to display on webpage<br>
-					  <span class="form-hint" style="margin-bottom: 0px;">Public facing - to be displayed on your webpage.</span>
+					  <!-- <span class="form-hint" style="margin-bottom: 0px;">Public facing - to be displayed on your webpage.</span> -->
 
 						  <span style="font-weight:400"></span>
 					  {% if errorMissingName %}
