--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -23,7 +23,7 @@
         </a>
         {% if loggedIn %} 
         <ul id="proposition-links">
-          <li><a href="url-to-page-1">Logout</a></li>
+          <li><a href="url-to-page-1">Sign out</a></li>
         </ul>
         {% endif %}
       </nav>
