fix to field on organiser

--- a/app/views/create-event/organiser.html
+++ b/app/views/create-event/organiser.html
@@ -149,7 +149,7 @@
 		  <div id="event-owner-section" class="form-group {% if errorMissingOwner %} form-group-error {% endif %}" style="margin-top:10px;">
 
 			  <label class="form-label-bold" for="organiser-name">
-				  Who is the internal point of contact for this event?<br>
+				  Name of internal contact for this event<br>
 				  <span class="form-hint" style="margin-bottom: 0px;">Not publicly displayed - for staff reference.</span>
 				  {% if errorMissingName %}
 						  <span class="error-message">
